# go-api-starter

./: .cz.toml  .env.example  .gitignore  .golangci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  Taskfile.yml  buf.gen.yaml  buf.yaml  cliff.toml  docker-compose.yml  go.mod  go.sum  sqlc.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
api/: README.md  openapi.yaml
cmd/server/: main.go
db/migrations/: 000001_create_users_table.up.sql  000002_create_todos_table.down.sql  000002_create_todos_table.up.sql
db/queries/: todo.sql  user.sql
deploy/: prometheus.yml
deploy/k8s/: README.md
docs/: ARCHITECTURE.md  Go API Starter.postman_collection.json  api.http  openapi.yaml
docs/adr/: 0005-opentelemetry-tracing.md  0006-rbac-strategy.md  0007-resilience-patterns.md  0008-audit-logging.md  001-use-clean-architecture.md  002-choose-echo-framework.md  003-jwt-authentication-strategy.md  004-error-handling-approach.md  README.md
internal/config/: config.go  config_test.go
internal/grpc/: context.go  event_hub.go  interceptors.go  server.go  todo_server.go  todo_server_test.go
internal/handler/: auth_handler.go  handler_test.go  todo_handler.go  todo_handler_test.go  token.go
internal/middleware/: middleware.go  rbac.go  (+1 more)
tools/todo-cli/: Cargo.toml
tools/todo-cli/src/: api.rs  auth.rs  config.rs  main.rs  output.rs
(+87 files in other folders)
